# MelanomaGraphAnalysisPythonProject

./: .gitignore  Procfile  Run Commands  app.py  comprehensive_model_comparison.py  config.py  database.py  generate_tables.py  generate_tables_from_model.py  main.py  manual_run_main.py  models.py  pyproject.toml  requirements.txt  run_commands.txt
model/: melanoma_classifier.joblib  scaler.joblib
model/KNN/: feature_selector.joblib  model.joblib  scaler.joblib
model/MLP/: feature_selector.joblib  model.joblib  scaler.joblib
model/RF/: feature_selector.joblib  model.joblib  scaler.joblib
model/SVM_Poly/: feature_selector.joblib  model.joblib  scaler.joblib
model/SVM_RBF/: feature_selector.joblib  model.joblib  scaler.joblib
model/SVM_Sigmoid/: feature_selector.joblib  model.joblib  scaler.joblib
model/feature_based/: gradient_boosting_latest  knn_latest  logistic_regression_latest  metadata.json  mlp_latest  random_forest.pkl  random_forest_latest  scaler.pkl  svm_(rbf).pkl  svm_rbf_latest  (+3 more)
output/: features.csv  model_summary_1.csv  prediction_result.txt  training_results.txt
src/: classifier.py  cnn_classifier.py  conventional_features.py  dataset_handler.py  dermoscopic_features.py  evaluation.py  feature_extraction.py  graph_construction.py  image_validator.py  model_comparison.py  preprocessing.py  superpixel.py  utils.py  visualization.py
templates/: about.html  base.html  comparison.html  history.html  index.html  results.html  train.html  train_results.html
test/: README.md
utils/: convert_joblib_into_keras.py  read_copy_classify_images.py
(+289 files in other folders)
