[tool.poetry]
name = "MelanomaGraphAnalysis"
version = "0.1.0"
description = "Melanoma detection using graph-based analysis"
authors = ["Your Name <your.email@example.com>"]
[tool.poetry.dependencies]
python = ">=3.11"
anthropic = ">=0.45.2"
joblib = ">=1.4.2"
matplotlib = ">=3.10.0"
networkx = ">=3.4.2"
numpy = ">=2.2.3"
pillow = ">=11.1.0"
scikit-image = ">=0.25.1"
scikit-learn = ">=1.6.1"
scipy = ">=1.15.1"
pandas = ">=2.2.3"
pywavelets = ">=1.4.1"
opencv-python = ">=4.7.0"
flask = ">=2.0.1"
gunicorn = ">=20.1.0"
seaborn = ">=0.12.2"
flask_sqlalchemy = ">=2.5.1"
tensorflow = ">=2.14.0"
[[tool.poetry.packages]]
include = "src"